[project]
name = "face4fairshifts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchcodec>=0.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0"
]
